--- a/Marindeck/View/Base.lproj/Main.storyboard
+++ b/Marindeck/View/Base.lproj/Main.storyboard
@@ -132,19 +132,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TestAccount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eai-3F-GbR">
-                                <rect key="frame" x="25" y="140" width="230" height="25.333333333333343"/>
+                                <rect key="frame" x="25" y="140" width="230" height="26"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@twitter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZQ-Zj-807">
-                                <rect key="frame" x="25" y="167.33333333333334" width="230" height="18"/>
+                                <rect key="frame" x="25" y="168" width="230" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ba-KR-x9x">
-                                <rect key="frame" x="12" y="217.33333333333326" width="256" height="509.66666666666674"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ba-KR-x9x">
+                                <rect key="frame" x="12" y="218" width="256" height="509"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="21c-6I-ALx">
                                         <rect key="frame" x="0.0" y="0.0" width="256" height="164"/>
@@ -161,7 +161,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KGg-ez-ShH" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="55.999999999999972" width="256" height="52"/>
+                                                <rect key="frame" x="0.0" y="56" width="256" height="52"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="52" id="ubE-wy-SkR"/>
@@ -172,7 +172,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AsG-wW-U0B" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="111.99999999999997" width="256" height="52"/>
+                                                <rect key="frame" x="0.0" y="112" width="256" height="52"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="52" id="xDf-oP-Vrs"/>
@@ -212,6 +212,7 @@
                             <constraint firstItem="88c-hh-IzT" firstAttribute="bottom" secondItem="nyB-cX-Xhh" secondAttribute="bottom" id="UBm-uk-upd"/>
                             <constraint firstItem="H9N-or-ZyM" firstAttribute="top" secondItem="IHq-iu-1Os" secondAttribute="top" constant="64" id="WFI-wV-wa6"/>
                             <constraint firstItem="88c-hh-IzT" firstAttribute="trailing" secondItem="QZQ-Zj-807" secondAttribute="trailing" constant="25" id="cHC-vQ-Ert"/>
+                            <constraint firstItem="nyB-cX-Xhh" firstAttribute="top" secondItem="3Ba-KR-x9x" secondAttribute="bottom" constant="19" id="e9s-c4-s1Q"/>
                             <constraint firstItem="QZQ-Zj-807" firstAttribute="leading" secondItem="88c-hh-IzT" secondAttribute="leading" constant="25" id="eHV-Ff-UXv"/>
                             <constraint firstItem="3Ba-KR-x9x" firstAttribute="leading" secondItem="88c-hh-IzT" secondAttribute="leading" constant="12" id="kUN-Dz-hTq"/>
                             <constraint firstItem="QZQ-Zj-807" firstAttribute="top" secondItem="eai-3F-GbR" secondAttribute="bottom" constant="2" id="uWD-uU-CQP"/>
